--- a/views/sideBar.ejs
+++ b/views/sideBar.ejs
@@ -2,18 +2,20 @@
     <div class="sidebar-sticky">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link active" href="/tests">
+                <a class="nav-link active" href="/models">
+                    <i class="fas fa-atom"></i>
+                    Models <span class="sr-only">(current)</span>
+                </a>
+                <a class="nav-link" href="/tests">
                     <i class="fas fa-vials"></i>
-                    Model Tests <span class="sr-only">(current)</span>
+                    Tests <span class="sr-only"></span>
                 </a>
                 <a class="nav-link" href="/datasets">
                     <i class="fas fa-book-open"></i>
                     Datasets <span class="sr-only"></span>
                 </a>
             </li>
-            <li class="nav-item divider"></li>
-
-            
+            <li class="nav-item divider"></li>    
         </ul>
     </div>
 </nav>
