--- a/views/tests.ejs
+++ b/views/tests.ejs
@@ -54,23 +54,6 @@
               </tr>
             </thead>
             <tbody id="testTableBody">
-              <% outputs.forEach((item) => { %>
-              <tr>
-                <td><%- item.id %></td>
-                <td><%- item.name %></td>
-                <td><img src="<%- item.input %>" width="50" height="50"></td>
-                <td><span class="badge badge-pill badge-<%- item.status == 'DONE' ? 'success' : item.status == 'RUNNING' ? 'warning' : 'danger'%>"><%- item.status%></span></td>
-                <td><%- item.timestamp %></td>
-                <td><%- item.createdAt %></td>
-                <td><%- item.updatedAt %></td>
-                <td>
-                    <button type="button" class="btn btn-outline-secondary" onclick="redirectToTest(<%- item.id %>)" <%- item.status == 'DONE' ? '' : 'disabled'%>><i class="fas fa-eye"></i></button>
-                    <button type="button" class="btn btn-outline-danger" onclick="deleteTest(<%- item.id %>)"><i class="far fa-trash-alt"></i></button>
-                </td>
-
-              </tr>
-              <% }) %>
-
             </tbody>
           </table>
         </div>
@@ -100,8 +83,8 @@
                     </select>
                 </div>
                 <div class="form-group">
-                <label for="imageUrl">Dataset</label>
-                <input type="text" class="form-control" id="imageUrl" aria-describedby="imageUrlHelp" placeholder="Path..." required>
+                <label for="dataset_path">Dataset</label>
+                <input type="text" class="form-control" id="dataset_path" aria-describedby="imageUrlHelp" placeholder="Path..." required>
                 <small id="imageUrlHelp" class="form-text text-muted">Path to image to be tested.</small>
                 </div>
             </div>
@@ -149,6 +132,7 @@
             profileId: profile.id, 
             modelId: availableModels[selectedModelIdx].id,
             cId: availableModels[selectedModelIdx].cId,
+            dataPath: $("#dataset_path").val()
         }
 
         alert(JSON.stringify(data, null, 4))
@@ -189,6 +173,39 @@
       });
     }
 
+    function renderTests(){
+      $.ajax({
+        type: "GET",
+        url: `<%- serverUrl %>/tests?profileId=${profile.id}`,
+        success: function(xhr, res, options){
+          let payload = "";
+          xhr.outputs.map(function(item, idx){
+            payload += `
+              <tr>
+                <td>${item.id}</td>
+                <td>${item.name}</td>
+                <td><img src="${item.input}" width="50" height="50"></td>
+                <td><span class="badge badge-pill badge-${ item.status == 'DONE' ? 'success' : item.status == 'RUNNING' ? 'warning' : 'danger'}">${ item.status }</span></td>
+                <td>${item.timestamp}</td>
+                <td>${item.createdAt}</td>
+                <td>${item.updatedAt}</td>
+                <td>
+                    <button type="button" class="btn btn-outline-secondary" onclick="redirectToTest(${ item.id })" ${ item.status == 'DONE' ? '' : 'disabled'}><i class="fas fa-eye"></i></button>
+                    <button type="button" class="btn btn-outline-danger" onclick="deleteTest(${ item.id })"><i class="far fa-trash-alt"></i></button>
+                </td>
+
+              </tr>`
+
+              document.getElementById("testTableBody").innerHTML = payload;
+          })
+        },
+        error: function(xhr){
+            console.log("err")
+        }
+      });
+    }
+
+    renderTests();
     renderModelPicker();
   </script>
 </body>
