--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,9 +1,20 @@
 html,
 body {
   height: 100%;
+  width: 100%;
 }
 
-body {
+#particles-js{
+  background-color:#262625;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.text-center {
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
@@ -15,7 +26,6 @@ body {
   justify-content: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
 }
 
 .form-signin {
