--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,34 +6,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="/docs/4.0/assets/img/favicons/favicon.ico">
+    <link rel="icon" href="/images/whitebox.jpg">
 
-    <title>Signin Template for Bootstrap</title>
+    <title>WhiteBoxUI</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sign-in/">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- Custom styles for this template -->
-    <link href="css/login.css" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/login.css" >
 </head>
 
-<body class="text-center">
-    <div class="form-signin">
-        <img class="mb-4" src="images/logo.png" alt="" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="inputEmail" class="sr-only">Username</label>
-        <input type="text" id="username" class="form-control" placeholder="Username" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="password" class="form-control" placeholder="Password" required>
-        <br>
-        <button class="btn btn-lg btn-primary btn-block" onclick="login()">Sign in</button>
-    </div>
+<body>
+    <div id="particles-js"></div>
+    <div id="main">
+        
+                <nav class="navbar navbar-inverse navbar-static-top navbar-expand-lg navbar-light bg-light">
+                  
+                    <a class="navbar-brand" href="/">
+                            Whitebox for AI based ML models
+                        </a>
+                        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                                <div class="mr-auto"></div>
+                                
+                                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/">About this platform</a>
+                                    </li>
+                                    
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/">Implementation</a>
+                                    </li>
 
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="">Future possibilities</a>
+                                    </li>
+
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/">Contact us</a>
+                                    </li>
+                                </ul>
+                     
+                            </div>
+                        
+                    </nav>
+                    
+            <br/>
+            <br/>
+            <br/>
+            
+            <div class="text-center">
+                
+                    <div class="card">
+                        <img class="card-img-top" src="images/whiteboxui.jpg" alt="" width="" height="100px">
+                        <div class="card-header h2 font-weight-normal">
+                            Let us take care of your model
+                        </div>
+                        <div class="form-signin">
+                        
+                            <h1 class="h3 mb-3 font-weight-normal">Sign In</h1>
+                            
+                            <input type="text" id="username" class="form-control" placeholder="Username" required autofocus>
+                            <br/>
+                            <input type="password" id="password" class="form-control" placeholder="Password" required>
+
+                            <br>
+                            <button class="btn btn-primary " onclick="login()">Sign in</button>
+                        </div>
+                    </div>
+                </div>
+              
+            </div>
     <script>
         function login() {
             const url = `<%- serverUrl %>/login`;
@@ -41,7 +98,6 @@
                 username: document.getElementById("username").value,
                 password: document.getElementById("password").value
             }
-
             $.ajax({
                 type: "POST",
                 url: url,
@@ -62,8 +118,10 @@
                     console.log("err")
                 }
             });
-        }
+        }  
     </script>
+    <script type="text/javascript" src="/css/particles.js"></script>
+    <script type="text/javascript" src="/css/app.js"></script>
+</div>
 </body>
-
 </html>
